k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: axon-landing
    namespace: axon
spec:
    selector:
        app: axon-landing
    ports:
        - port: 80
          targetPort: 3000
    type: ClusterIP
